# pbpilot-api

./: .backlog_tasks.md  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  JOB_DOMAIN.md  Makefile  README.md  docker-compose.yml  local.compose.yml  main.py  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: create-tfstate-bucket.yml  deploy-changes-to-dev.yml  deploy-dev.yml  deploy-infrastructure.yml  deploy-prod.yml  deploy.yml  destroy-resources.yml
admins/: __init__.py  client.py  company.py  equipment.py  inspector.py  job.py  pricing_plan.py  project.py  user.py
config/: __init__.py  database.py  logger.py  router.py  settings.py
core/: __init__.py  admin.py  constants.py  dao.py  dependencies.py  dto.py  handlers.py  mapper.py  models.py  pagination.py  schemas.py  service.py
dao/: __init__.py  blacklist_token.py  client.py  company.py  equipment.py  inspector.py  job.py  job_auxiliary.py  observation.py  pricing_plan.py  project.py  sampling.py  unit.py  user.py
dependencies/: __init__.py  auth.py
dto/: __init__.py  auth.py  aws.py  equimpent.py  inspector.py  job.py  project.py
endpoints/: __init__.py  admin.py  auth.py  client.py  company.py  debug.py  equimpent.py  inspector.py  job.py  lead_paint.py  main.py  pricing_plan.py  project.py  settings.py  user.py
exceptions/: __init__.py  auth.py  client.py  company.py  equipment.py  file.py  job.py  project.py  user.py
exceptions/domain/: __init__.py  file.py
models/: __init__.py  blacklist_token.py  client.py  company.py  equipment.py  inspector.py  job_auxiliary.py  jobs.py  observation.py  pricing_plan.py  projects.py  sampling.py  unit.py  user.py
models/migrations/: env.py
models/migrations/versions/: 0762fc920ed9_add_free_reports_count.py  0eb627135282_add_last_activity_field.py  1142a3c06217_remove_field_for_free_day.py  174f7637b1ed_add_project_model.py  17f2221049c8_create_inspector_model.py  1c59a6fc0a09_created_company_model_schedule.py  28497f173389_drop_calendar_events_and_add_scheduled_.py  40add9110cab_creating_tables_for_storing_report_form_.py  4b5a6a0f9af0_create_token_model.py  4de6d396c6ec_extend_s3_keys_for_equipment_and_.py  524950887bf1_remove_previous_keys_s3.py  559959a0137b_add_marketing_fields_to_user.py  57df05b774f5_create_equipment_model.py  5eab186f1c67_add_status_for_job.py  64940eae70c7_create_pricing_plan.py  6b87c88eeb7b_add_onboarding_field_to_user.py  849b6e115dfe_create_client_model.py  8c07c784da05_remove_xrf_reading_from_observations.py  8c52043aa1c1_change_datetime_to_date.py  8fb93196013f_add_plan_period_to_user.py  9d3e7f1a2b4c_add_description_to_photos.py  a1b2c3d4e5f6_remove_is_day_off_from_company_schedule.py  a9f1b2c3d4e5_add_parent_job_id_and_room_floor_plan_data.py  b1c2d3e4f5g6_add_unit_id_to_coc_forms.py  b710e0fa1c3d_created_job_model.py  b887b0e899b6_create_user_model.py  ba7cd107ccbd_add_status_for_project.py  c5d6e7f8a9b0_add_info_to_observation_category_enum.py  d7e8f9a0b1c2_add_sample_photos_table.py  e52818476f68_add_inspector_id_toequipment.py  ee298349b79e_created_company_model_schedule.py
schemas/: __init__.py  admin.py  auth.py  clients.py  company.py  equipment.py  inspector.py  job_sync.py  jobs.py  main.py  observation.py  presigned.py  pricing_plan.py  projects.py  settings.py  token.py  user.py
scripts/: create_admins.py  create_clients.py  run_migrations_local.py
services/: __init__.py  admin.py  auth.py  client.py  company.py  email.py  equipment.py  inspection_presigned.py  inspector.py  job.py  pricing_plan.py  project.py  settings.py  user.py
services/aws/: __init__.py  actions.py  base.py  mixins.py  upload.py
services/jwt/: hasher.py  token.py
services/lead_paint/: __init__.py  grouping.py  llm.py  parsers.py  schemas.py  service.py
terraform/environments/: shared-variables.tf  shared.tf
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: main.tf  terraform.tfvars  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  output.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
