[project]
name = "pbpilot-api"
version = "0.1.0"
description = "Pbpilot API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.35.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.0",
    "mangum>=0.21.0",
    "playwright>=1.40.0",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.2.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqladmin[full]>=0.23.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]

[dependency-groups]
graph = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]
dev = [
    "boto3-stubs[mypy-boto3-dynamodb,mypy-boto3-lambda,mypy-boto3-s3]>=1.42.5",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-python-jose>=3.5.0.20250531",

]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = [
    "^grafana_storage/",
    "^migrations/",
    "^models/migrations/",
    "^scripts/",
    "^test_scripts/",
    "^tests/",
    "^docs/",
]
strict = true
local_partial_types = true
warn_unreachable = true

[tool.ruff]
line-length = 80 # PEP8
target-version = "py313"
fix = true # Autofix
exclude = [
    "migrations",
    ".venv",
    ".qodo",
    "build",
    "dist",
    "tests",
    "tests/fixtures",
    "scripts",
    "__pycache__",
    "services/ai/prompts.py", # No need to verify line lenght for prompt
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false # Do not format docstrings

[tool.ruff.lint.per-file-ignores]
"**" = [
    "D101", # Docstring in `__init__`
    "D100", # Docstring in a public module
    "D104", # Docstring in a public package
    "D401", # docstring should be in imperative mood
    "PLE1205", # too many arguments for `logging` format string
    "TRY301", # Abstract `raise` to an inner function
    "ERA001", # Found commented-out code
    "D203", # Blank line before class
    "D213", # Multi-line docstring summary second line
    "COM812", # Formatting conflict
    "Q000", # flake8-quotes
    "Q003", # flake8-quotes
]

"**/schemas/*.py" = [
    "N805" # Ignore first argument should be named self. Pydantic issue.
]

"schemas/*.py" = [
    "N805" # Ignore first argument should be named self. Pydantic issue.
]

"tests/*.py" = [
    "S101", # asserts
    "D100", # Docstring in a public module
    "D101", # Docstring in a public class
    "D102", # Docstring in a public method
    "D103", # Docstring in a public method
    "D104", # Docstring in a public package
    "S105", # hardcoded passwords
    "S404", # subprocess calls are for tests
    "S603", # do not require `shell=True`
    "S607", # partial executable paths
    "PT012", # simple statement in pytest.raises block
    "S106", # hardcoded assigned values
    "D203", # blank line before class
    "D213", # multi-line summary in docstring
    "COM812", # comma formatting conflicts with formatter
    "Q000", # quote style conflicts with formatter
    "Q003", # mixed quotes conflicts with formatter
    "PLR2004" # magic value, for status codes
]

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # maccabe
    "COM", # flake8-commas
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle
    "ERA", # flake8-eradicate
    "EXE", # flake8-executable
    "F", # pyflakes
    "FBT", # flake8-boolean-trap
    "FLY", # pyflint
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N", # pep8-naming
    "PERF", # perflint
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff
    "S", # flake8-bandit
    "SIM", # flake8-simpify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

# Ignore conflictiong rules
ignore = [
    "D203", # incorrect-blank-line-before-class (conflict with D211)
    "D213", # multi-line-summary-second-line (conflict with D212)
    "COM812", # comma formatting conflicts with formatter
    "Q000", # quote style conflicts with formatter
    "Q003", # mixed quotes conflicts with formatter
    "PLR0913", # To many arguments in func definition
]
